--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Linde's blog
-theme: jekyll-theme-cayman
+theme: minima
 author: Linde7777
 email: longpeng96@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
